# Get-Rusted

./: .gitignore  LICENSE  README.md
burn-mnist-android/: Cargo.toml
burn-mnist-android/.cargo/: config.toml
burn-mnist-android/MnistRecognizer/: README.md  settings.gradle.kts
burn-mnist-android/MnistRecognizer/app/: build.gradle.kts
burn-mnist-android/MnistRecognizer/app/src/androidTest/java/com/example/mnistrecognizer/: ExampleInstrumentedTest.kt
burn-mnist-android/MnistRecognizer/app/src/main/: AndroidManifest.xml
burn-mnist-android/MnistRecognizer/app/src/main/java/com/example/mnistrecognizer/: MainActivity.kt  MnistRecognizePage.kt  utils.kt
burn-mnist-android/MnistRecognizer/app/src/main/java/com/example/mnistrecognizer/ui/theme/: Color.kt  Theme.kt  Type.kt
burn-mnist-android/MnistRecognizer/app/src/main/res/values/: strings.xml  themes.xml
burn-mnist-android/MnistRecognizer/app/src/main/rust/: Cargo.toml
burn-mnist-android/MnistRecognizer/app/src/main/rust/.cargo/: config.toml
burn-mnist-android/MnistRecognizer/app/src/test/java/com/example/mnistrecognizer/: ExampleUnitTest.kt
burn-mnist-android/MnistRecognizer/gradle/: libs.versions.toml
burn-mnist-android/MnistRecognizer/gradle/wrapper/: gradle-wrapper.properties
burn-mnist-android/mnist-android/app/src/main/java/com/example/calc/: ButtonGrid.kt  CalculatorScreen.kt  Display.kt  Home.kt  MainActivity.kt  util.kt
burn-mnist-android/mnist-android/app/src/main/java/com/example/calc/ui/theme/: Theme.kt
burn-mnist-android/mnist-android/app/src/main/rust/: Cargo.toml  build.rs  bulid.rs  postbuild.sh
burn-mnist-android/mnist-android/app/src/main/rust/.cargo/: config.toml
burn-mnist-android/mnist-android/app/src/main/rust/src/: lib.rs  state.rs
burn-mnist-android/mnist-android/app/src/main/rust/test123/: cog2312.toml
burn-mnist-android/mnist-android/app/src/main/rust_calc/src/: lib.rs  web.rs
burn-mnist-android/mnist-android/app/src/main/rust_calc/src/model/: mod.rs
burn-mnist-android/mnist-android/gradle/: libs.versions.toml
burn-mnist-web-retrain/: run-server.sh
burn-mnist-web-retrain/src/: bulid.rs
calculator-android/Calculator/app/: build.gradle.kts
calculator-android/www/: package.json
calculator-android/www/src/: index.js
graphics-game/: Cargo.toml
graphics-game/src/: bound.rs  main.rs  player.rs
guessing_game/src/: main.rs
rust-in-js/: README.md
rust-in-js/animal-classify/: Cargo.toml  Readme.md  index.html  styles.css
rust-in-js/animal-classify/src/: lib.rs
rust-in-js/animal-classify/www/: index.html  package-lock.json  package.json  script.js
rust-in-js/calculator/: Cargo.toml
rust-in-js/calculator/src/: lib.rs
rust-in-js/calculator/www/: package-lock.json
rust-in-js/game-of-life/: Cargo.toml
rust-in-js/game-of-life-canvas/: README.md
rust-in-js/game-of-life-canvas/src/: lib.rs
rust-in-js/game-of-life-canvas/www/: package-lock.json
rust-in-js/game-of-life/src/: lib.rs
rust-in-js/orbital-game/: Cargo.toml
rust-in-js/rust-wasm-alert/: Cargo.toml
wasmedge-wasi/: Cargo.toml  Dockerfile  README.md  slim.report.json
wasmedge-wasi/src/: main.rs
(+28 files in other folders)
