[package]
authors = ["Dilshod Tadjibaev (@antimora), Shashank (@scramjet911)"]
edition.workspace = true
license = "MIT OR Apache-2.0"
name = "mnist-inference-web"
publish = false
version.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["ndarray"]

ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "*", default-features = false }
serde = { version = "*" }
console_error_panic_hook = { version = "*" }

# Wasm dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
pollster = { version = "*" }
