[package]
name = "mnist-android"
edition = "2021"
publish = false
version = "0.0.1"
authors = ["Scramjet911"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["ndarray"]

ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.13.2", features = ["ndarray"] }
jni = "0.21.1"
android_logger = "0.14.1"
log = "0.4"

[build-dependencies]
burn-import = "0.13.2"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
strip = true
