[package]
name = "mnist-custom"
edition = "2021"
publish = false
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["ndarray"]

ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.13.2", features = ["ndarray"] }
jni = "0.21.1"

[build-dependencies]
burn-import = "0.13.2"
