[package]
name = "mnist-custom"
edition = "2021"
publish = false
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["ndarray", "embedded-model"]

embedded-model = []

ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { version = "0.13.2", features = ["ndarray"] }
jni = "0.21.1"
android_logger = "0.14.1"
log = "0.4"
image = "0.25.2"

[build-dependencies]
burn-import = "0.13.2"
